<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".SettingsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:text="@string/set_theme"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="4dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_marginTop="2dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/coolPinkTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_ic"
            android:tint="@color/cool_pink"/>
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/coolblueTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_ic"
            android:tint="@color/cool_blue"/>
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/coolPurpleTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_ic"
            android:tint="@color/purple_500"/>
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/coolGreenTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_ic"
            android:tint="@color/cool_green"/>
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/coolBlackTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_ic"
            android:tint="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="2dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:text="@string/sort_by"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:gravity="center|start"
            android:textSize="18sp"
            android:paddingLeft="5dp"
            android:layout_marginHorizontal="2dp"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/sortBtn"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/sort_ic"
            android:tint="@color/cool_pink"
            android:padding="5dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/versionName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:text="@string/version_name"
        android:textColor="@color/black"
        android:padding="16dp"
        android:textSize="18sp"
        android:layout_marginTop="2dp"/>

</LinearLayout>